hphp/hack/test/typecheck/new_inference/transitive_error_2.php.exp
File "transitive_error_2.php", line 12, characters 5-6:
Invalid argument (Typing[4323])
  File "transitive_error_2.php", line 8, characters 12-12:
  `T` is a constrained type parameter
  File "transitive_error_2.php", line 8, characters 17-22:
  This type constraint is violated
  File "transitive_error_2.php", line 8, characters 17-22:
  Expected `string`
  File "transitive_error_2.php", line 4, characters 20-22:
  But got `int`
